atualizando index.html

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Oficina do Fábio</title>
 
     <!-- FAVICON -->
-     <link rel="shortcut icon" href="../img/logo_oficina.png" type="image/x-icon">
+     <link rel="shortcut icon" href="docs/img/logo_oficina.png" type="image/x-icon">
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/responsive.css">
-    <link rel="stylesheet" href="../css/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="docs/css/style.css">
+    <link rel="stylesheet" href="docs/css/reset.css">
+    <link rel="stylesheet" href="docs/css/responsive.css">
+    <link rel="stylesheet" href="docs/css/fontawesome/css/all.min.css">
 
     <!-- SCROLL REVEAL -->
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -31,7 +31,7 @@
     
         <nav class="navbar">
             <div class="navbar-logo">
-                <img src="../img/logo_oficina.png" alt="Logo">
+                <img src="docs/img/logo_oficina.png" alt="Logo">
                 <p>Oficina do Fábio</p>
             </div>
     
@@ -147,7 +147,7 @@
     <a href="#main"><i class="fa-solid fa-arrow-up"></i></a>
    </div> 
 
-    <script src="../js/script.js"></script>
-    <script src="../js/reveal.js"></script>
+    <script src="docs/js/script.js"></script>
+    <script src="docs/js/reveal.js"></script>
 </body>
 </html>
